test/pass/closures/close_locals_in_constructor.lily
class Example {
    var @x = (|z: Integer| (|| print(z) )() )
    define k(a: Integer) {
        @x(a)
    }
}

Example().k(5)
